manifests/discourse/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: discourse
  name: web
  namespace: discourse
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    deploymentconfig: discourse
  sessionAffinity: None
  type: ClusterIP
