manifests/discourse/07-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: discourse
  namespace: discourse
  labels:
    app: discourse
spec:
  host: discourse-discourse.apps.vrutkovs-2.devcluster.openshift.com
  to:
    kind: Service
    name: web
    weight: 100
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
